2007-05-28 Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* avogadro/src/extentions/forcefieldextention.cpp: Changed MMF94 to
	MMFF94 (otherwise MMFF94 is not usable...)

2007-11-28  Marcus D. Hanwell <marcus@cryos.org>

	* libavogadro/src/engines/ribbonengine.*,
	libavogadro/src/engines/ribbonsettingswidget.ui: Removed the opacity
	slider for now. Also added in a new display type - lines. Renders
	cylinders between points and spheres at each point.

2007-11-27  Marcus D. Hanwell <marcus@cryos.org>

	* libavogadro/src/glpainter.cpp: Optimised some of the drawing
	functions to help when drawing large molecules.

	* libavogadro/src/engines/wireengine.cpp: Optmised the bond drawing,
	only use multiLines when the bond order is greater than one.

2007-11-26  Marcus D. Hanwell <marcus@cryos.org>

	* libavogadro/src/painter.h, libavogadro/src/glpainter.*,
	libavogadro/src/povpainter.h: Added new drawTriangle function that
	takes a normal as the fourth argument.

	* libavogadro/src/engines/ringengine.cpp: Calculate a normal and use it
	for the whole ring - improved lighting with no artifacts in each ring,
	still issues around turning points.

	* libavogadro/src/camera.*, libavogadro/src/povpainter.cpp,
	libavogadro/src/glpainter.cpp, libavogadro/src/tools/navigate.cpp,
	libavogadro/src/tools/manipulatetool.cpp,
	libavogadro/src/tools/eyecandy.cpp,
	libavogadro/src/tools/clickmeasuretool.cpp,
	libavogadro/src/tools/autorotatetool.cpp,
	libavogadro/src/engines/ringengine.cpp,
	libavogadro/src/engines/labelengine.cpp: Fixed the case of the back
	transformed axis functions and ported the existing code.

2007-11-20  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* avogadro/src/extensions/selectextension.cpp: Renamed extension
	for SMARTS selection. Added support for new options, such as
	invert selection. (More to come later, e.g., atom selection by
	name, residue by name, etc.)

2007-11-19  Marcus D. Hanwell <marcus@cryos.org>
